--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,16 @@ development:
   <<: *default
   database: tents_development
 
+staging:
+  adapter: mysql2
+  encoding: utf8
+	database: tents_staging
+  reconnect: false
+  pool: 5
+  username: tent
+  password: ib80PfBhyp
+  host: 127.0.0.1
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -25,8 +35,15 @@ test: &test
   database: tents_test
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+	database: tents_production
+  reconnect: false
+  pool: 5
+  username: tent
+  password: ib80PfBhyp
+  host: 127.0.0.1
+
 
 cucumber:
   <<: *test
