--- a/config/apache/apache-production.conf
+++ b/config/apache/apache-production.conf
@@ -26,6 +26,10 @@
   DocumentRoot /usr/local/www/toddlertents-production/current/public
   ErrorLog /var/log/apache2/toddlertents-production/error.log
   CustomLog /var/log/apache2/toddlertents-production/access.log combined
+	
+	SSLCertificateFile /etc/apache2/certificates/ssl.crt
+	SSLCertificateKeyFile /etc/apache2/certificates/ssl.key
+	SSLCertificateChainFile /etc/apache2/certificates/sub.class1.server.ca.pem
   
   <Directory "/usr/local/www/toddlertents-production/current/public">
     Options FollowSymLinks
