--- a/config/apache/apache-staging.conf
+++ b/config/apache/apache-staging.conf
@@ -15,6 +15,7 @@
   <Location />
     Deny from all
     Allow from 74.64.109.251/32
+    Allow from 69.193.194.58/32
   </Location>
   
 </VirtualHost>
