--- a/config/apache/apache-production.conf
+++ b/config/apache/apache-production.conf
@@ -28,8 +28,12 @@
   ErrorLog /var/log/apache2/toddlertents-production/error.log
   CustomLog /var/log/apache2/toddlertents-production/access.log combined
 	
+	SSLEngine on 
+	SSLProtocol all -SSLv2 
+	SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM
+	
 	SSLCertificateFile /etc/apache2/certificates/ssl.crt
-	SSLCertificateKeyFile /etc/apache2/certificates/ssl.key
+	SSLCertificateKeyFile /etc/apache2/certificates/private.key
 	SSLCertificateChainFile /etc/apache2/certificates/sub.class1.server.ca.pem
   
   <Directory "/usr/local/www/toddlertents-production/current/public">
