--- a/config/apache/apache-production.conf
+++ b/config/apache/apache-production.conf
@@ -43,8 +43,9 @@
   </Directory>
   
   <Location />
-    Deny from all
-    Allow from 74.64.109.251/32
+    # Deny from all
+    # Allow from 74.64.109.251/32
+		Allow from all
   </Location>
   
 </VirtualHost>
