fixing apache config for port 80

--- a/config/apache/apache-production.conf
+++ b/config/apache/apache-production.conf
@@ -13,9 +13,10 @@
   </Directory>
   
   <Location />
-    Deny from all
-    Allow from 74.64.109.251/32
-    Allow from 69.193.194.58/32
+    # Deny from all
+    # Allow from 74.64.109.251/32
+    # Allow from 69.193.194.58/32
+		Allow from all
   </Location>
   
 </VirtualHost>
