permanent redirect from port 80 to 443

--- a/config/apache/apache-production.conf
+++ b/config/apache/apache-production.conf
@@ -1,7 +1,8 @@
 <VirtualHost *:80>
   RailsEnv "production"
   ServerName www.toddlertents.com
-  
+  RedirectPermanent / https://www.toddlertents.com/
+	
   DocumentRoot /usr/local/www/toddlertents-production/current/public
   ErrorLog /var/log/apache2/toddlertents-production/error.log
   CustomLog /var/log/apache2/toddlertents-production/access.log combined
