redirect non www to https www

--- a/config/apache/apache-production.conf
+++ b/config/apache/apache-production.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
   RailsEnv "production"
   ServerName www.toddlertents.com
+  ServerAlias toddlertents.com
   RedirectPermanent / https://www.toddlertents.com/
 	
   DocumentRoot /usr/local/www/toddlertents-production/current/public
